<resources>
    //App Strings
    <string name="app_name">UViten</string>
    <string name="title_home">Hjem</string>
    <string name="title_map">Kart</string>
    <string name="title_profile">Profil</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiaW4yMDAwdGVhbTEiLCJhIjoiY2wwdHczdTMyMHB1NTNjbm1hYm93cWM3byJ9.KO3KIArfPC0qscDIi3ik7Q</string>


    //Timer buttons
    <string name="startButton">Start</string>
    <string name="pauseButton">Pause</string>
    <string name="stopButton">Stop</string>
    //Timer description
    <string name="description">Start nedtellingen etter du har smørt deg, slik at du vet når du må smøre deg neste gang! Husk at du må smøre deg tidligere dersom du feks. svetter eller bader. </string>

    //icons
    <string name="glasses">Beskytt øynene dine</string>
    <string name="sunscreen">Bruk solkrem</string>
    <string name="cap">Beskytt hodeskallen din</string>
    <string name="clothes">Beskytt kroppen din med klær</string>
    <string name="shade">Hold deg i skyggen</string>
    <string name="imgview">imgView</string>

    //visste du svar
    <string name="solbrentParasoll">..du kan bli solbrent under en parasoll?</string>
    <string name="solbrentParasollUndertekst">Parasoll skjermer veldig godt mot sola men du er 100 prosent beskyttet, for parasollen stopper bare de direkte strålene, men ikke dem som blir reflektert i overflater som vann eller sand.</string>

    <string name="solVindu">..solstrålene kan trenge seg gjennom en vindusrute?</string>
    <string name="solVinduUndertekst">Det er hovedsakelig UVB-strålene som gjør oss brune, og de kan stort sett ikke trenge gjennom glass. Det kan derimot UVA-strålene, som gir en kortvarig brunfarge.</string>

    <string name="hudFaktor">..huden har en naturlig solfaktor?</string>
    <string name="hudFaktorUndertekst">Jo mørkere du er fra naturens side, desto høyere er din naturlige solfaktor. Det samme gjelder hvis du har allerede har fått farge fra sola. Tidlig på sommeren er du derfor mer utsatt for å bli brent enn du er sent på sommeren, men da har du samtidig utsatt deg for en solskade.</string>

    <string name="solskade">..du har fått en solskade når du har blitt brun?</string>
    <string name="solskadeUndertekst">Når du får fregner eller blir solbrun, er det faktisk snakk om en solskade. For at du skal få en langvarig brunfarge, trenger UVB-strålene nemlig først ned i det øverste hudlaget og gjør huden rød og forbrent. Det skader hudcellene og øker risikoen for hudkreft, og derfor bør du holde det på et minimum.</string>

    <string name="hudkreft">..hudkreft forårsakes i hovedsak av at ubeskyttet hud får UV-stråler på seg?</string>
    <string name="hudkreftUndertekst">Både enkeltepisoder med kraftig solforbrenning og samlet solbelastning gjennom livet er av betydning for utvikling av hudkreft.</string>

    <string name="hudkreftNorge">..Norge er blant landene i verden som har stoerst forekomst av foeflekkreft (melanom)?</string>
    <string name="hudkreftNorgeUndertekst">Sol er bra for helsa i små mengder, men rundt 9 av 10 tilfeller av hudkreft i Norge har sammenheng med for mye intens sol og solarium. Melanom (foeflekkreft) er blant kreftformene som oeker mest i Norge.</string>

    <string name="dVitamin">..Sola er vår viktigste kilde til vitamin D?</string>
    <string name="dVitaminUndertekst">Når solstrålene treffer huden dannes vitamin D, som er spesielt viktig for bein-bygningen. Mangel på vitamin D kan øke risikoen for skjelettsykdommer. Litt sol er derfor viktig og bra, og det bare kort tid i sommersol som skal til for å få nok.</string>

    <string name="solkremVinter">..du må huske solkrem også om vinteren?</string>
    <string name="solkremVinterUndertekst">Selv om temperaturene er lave og UV-strålingen generelt sett er lavere på vinteren, er solen fremdeles til stede også denne årstiden. Snø kan i tillegg reflektere solens stråler og dermed øke strålingen, spesielt på fjellet.</string>

    <string name="solbeskyttelse">..du alltid må bruke klær, solhatt og solbriller i tillegg til solkrem?</string>
    <string name="solbeskyttelseUndertekst">Solkrem skal helst ikke brukes for å forlenge oppholdet i solen, men skal være et supplement til klær, solhatt, solbriller og skygge for å redusere mulige helserisikoer ved soleksponering.</string>

    <string name="solkremVoksen">..En voksen person bør bruke en håndfull solkrem til ansikt og kropp?</string>
    <string name="solkremVoksenUndertekst">De aller fleste smører seg inn med for lite solkrem. Til èn smøring av hele kroppen anbefales det én håndfull, det vil si ca. 30 – 40 ml.</string>

    //Profil Strings hardkodet
    <string name="ProfilOverskrift">Juster informasjonen så den passer deg!</string>
    <string name="visste_du_at">Visste du at?</string>
    <string name="fremover_p_info">fremover på info</string>
    <string name="bakover_p_info">bakover på info</string>
    <string name="textview">TextView</string>
    <string name="_10_tips">10 Tips</string>
    <string name="hudkreftknapp">Hudkreft</string>
    <string name="uv_fakta">UV fakta</string>
    <string name="todo">TODO</string>
    <string name="uv_sensitiv">UV sensitiv</string>
    <string name="uv_resistent">UV resistent</string>
    <string name="jeg_befinner_meg_i_omgivelser_preget_av">Jeg befinner meg i omgivelser preget av:</string>
    <string name="vann_sn_eller_sand">Vann, Snø, eller Sand</string>
    <string name="sn_sand_eller_vann">Snø, Sand eller Vann</string>
    <string name="mange_h_ydemeter">Mange høydemeter</string>
    <string name="sn">Snø</string>
    <string name="psst_husk_lagre">Psst! Husk å lagre!</string>
    <string name="lagre">Lagre</string>
    <string name="TomSpfAnbefaling">--</string>
    <string name="spf">Spf</string>
    <string name="uvSolVarsel">UV:</string>
    <string name="temp">Temp:</string>

</resources>