<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user.UserFragment"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/profilImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_account_circle_100"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/profilTvOverspinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:text=""
            android:textAlignment="center"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="140dp"
                android:textStyle="bold"
                android:text="@string/uv_sensitiv"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/uv_resistent"
                android:textSize="14sp"/>

        </LinearLayout>
        <SeekBar
            android:id="@+id/profilSeekBar"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="300dp"
            android:layout_height="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:max="5"
            android:progress="0"
            />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="center"
            android:src="@drawable/fitzscale__2_"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/jeg_befinner_meg_i_omgivelser_preget_av"
            android:textSize="16sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="@string/vann_sn_eller_sand"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/snoo2"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:textOff="@string/sn_sand_eller_vann"
                android:textOn="@string/sn" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="@string/mange_h_ydemeter"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/hoydemeter"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:textOff="@string/sn_sand_eller_vann"
                android:textOn="@string/sn" />

        </LinearLayout>

        <TextView
            android:id="@+id/uvTestTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:hint="@string/psst_husk_lagre"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/profilLagre"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/lagre"
            android:textStyle="bold"
            android:textSize="30sp"/>


    </LinearLayout>

</LinearLayout>