<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainInSimple"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tvSimple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.github.mikephil.charting.charts.ScatterChart
        android:id="@+id/SCchart"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginBottom="136dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        app:layout_constraintTop_toBottomOf="@+id/tvSimple"
        android:orientation="horizontal"
        android:padding="20dp"
        android:layout_margin="10dp"
        android:layout_gravity="center_horizontal"
        android:weightSum="5">

        <ImageView
            android:id="@+id/glassesImg"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/glasses"
            android:src="@drawable/glasses"
            android:layout_gravity="center_horizontal"
            app:layout_constraintTop_toBottomOf="@+id/tvSimple"
            android:layout_weight="1"
            />

        <ImageView
            android:id="@+id/sunscreenImg"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/sunscreen"
            android:src="@drawable/sunscreen"
            android:layout_gravity="center_horizontal"
            app:layout_constraintStart_toEndOf="@id/glassesImg"
            android:layout_weight="1"
            />

        <ImageView
            android:id="@+id/capImg"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cap"
            android:src="@drawable/cap"
            android:layout_gravity="center_horizontal"
            app:layout_constraintStart_toEndOf="@id/sunscreenImg"
            android:layout_weight="1"
            />

        <ImageView
            android:id="@+id/clothesImg"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/clothes"
            android:src="@drawable/clothes"
            android:layout_gravity="center_horizontal"
            app:layout_constraintStart_toEndOf="@id/capImg"
            />

        <ImageView
            android:id="@+id/shadeImg"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/shade"
            android:src="@drawable/shadeandsunbed"
            android:layout_gravity="center_horizontal"
            app:layout_constraintStart_toEndOf="@id/clothesImg"
            android:layout_weight="1"
            />


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>