<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tvAdvanced"
        android:text="@string/description"
        android:textSize="16sp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        app:layout_constraintTop_toBottomOf="@+id/tvAdvanced"
        >

        <TextView
            android:id="@+id/tvDigitalTime"
            android:textSize="35sp"
            android:text="Noe"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            />

        <me.zhanghai.android.materialprogressbar.MaterialProgressBar
            android:id="@+id/progress_circular"
            style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:minWidth="250dp"
            android:minHeight="250dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayoutButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        android:layout_weight="3"
        >

        <Button
            android:id="@+id/buttonStart"
            android:text="@string/startButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            >
        </Button>

        <Button
            android:id="@+id/buttonPause"
            android:text="@string/pauseButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false">
        </Button>

        <Button
            android:id="@+id/buttonStop"
            android:text="@string/stopButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight ="1"
            android:enabled="false"
            >
        </Button>

    </LinearLayout>

    <TextView
        android:id="@+id/tvTimerExpired"
        android:textSize="16sp"
        android:text=""
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutButtons"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        />



</androidx.constraintlayout.widget.ConstraintLayout>